--- a/src/componenets/Header/Header.css
+++ b/src/componenets/Header/Header.css
@@ -1,5 +1,6 @@
-.header-bg{
+/* .header-bg{
 
-    background-image: url("https://studybullet.com/wp-content/uploads/2022/04/Master-HTML5-Bootstrap5-amp-ReactJs-From-Scratch.jpg");
+    background-image: url("https://www.google.com/imgres?imgurl=https%3A%2F%2Ft4.ftcdn.net%2Fjpg%2F04%2F39%2F13%2F37%2F360_F_439133763_FrLdhZsd5aGC23r9ATARuKJBr8ifZjIe.jpg&imgrefurl=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dquiz%2Bbackground&tbnid=G3u5bz31HrKAUM&vet=12ahUKEwik_cu4mdb6AhWyV3wKHVdRBbsQMygDegUIARDZAQ..i&docid=0IQwWaZvACFHkM&w=768&h=360&q=quiz%20app%20using%20background%20img&hl=en&ved=2ahUKEwik_cu4mdb6AhWyV3wKHVdRBbsQMygDegUIARDZAQ");
+    background-size: cover;
     
-}
+} */
